crates/toml_edit/tests/snapshots/invalid/key/duplicate-keys-08.stderr
TOML parse error at line 2, column 1
  |
2 | arr = [2]
  | ^^^
duplicate key
